[tool.poetry]

package-mode = false
[project]
name = "uav"
version = "0.1.0"
description = ""
authors = [
    {name = "Pavel Kushch",email = "mitated@gmail.com"}
]
readme = "README.md"
packages = [
    { include = "uav", from = "app" }
]
requires-python = ">=3.9"
dependencies = [
    "pymavlink (>=2.4.47,<3.0.0)",
    "dronekit (>=2.9.2,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
